--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,8 @@ header .container {
   color: #1f355e;
 }
 .nav-item {
-  padding-left: 3rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 .nav-tabs .nav-link {
   color: #000000;
@@ -101,6 +102,8 @@ header .container {
 .title-heading h1 {
   font-family: "Fredoka One";
   margin: 30px 0px;
+  text-align: center;
+  font-size: 36px;
 }
 .row h1 {
   margin-top: 60px;
@@ -110,4 +113,11 @@ header .container {
 }
 .description p {
   font-family: "Source Sans Pro Regular";
+  font-weight: 700;
+}
+.contact-info h1{
+  text-align: center;
+  font-family: "Source Sans Pro Regular";
+  font-size: 30px;
+  font-weight: bold;
 }
