--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,10 @@ header .container {
 #about {
   position: relative;
   text-align: center;
+  background-image: url(../img/slice6.png);
+  background-repeat: no-repeat;
+  background-size: 258px 298px;
+  background-position: center;
 }
 #descbox-about {
   margin-left: 20%;
@@ -101,9 +105,10 @@ header .container {
 }
 .title-heading h1 {
   font-family: "Fredoka One";
-  margin: 30px 0px;
+  padding: 45px 0px;
   text-align: center;
   font-size: 36px;
+  margin: unset;
 }
 #header-row h1 {
   margin-top: 60px;
@@ -124,10 +129,13 @@ header .container {
   font-weight: bold;
 }
 #footer{
-  margin-top: 120px;
+  margin-top: 10%;
   background-color:rgba(255, 255, 255, 0.1);
   max-width: 100%;
   padding: 5% 6.5% 1%;
+  background-image: url(../img/ice-left.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
 }
 #footer .row #footer-right h1{
   text-align: right;
@@ -167,4 +175,12 @@ header .container {
 .logo{
   text-align: right;
   margin-bottom: 10px;
+}
+.navbar-text{
+  font-family: "Fredoka One";
+}
+#footer .img{
+  background-image: url(../img/ice-right.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
 }
