--- a/css/style.css
+++ b/css/style.css
@@ -133,9 +133,9 @@ header .container {
   background-color:rgba(255, 255, 255, 0.1);
   max-width: 100%;
   padding: 5% 6.5% 1%;
-  background-image: url(../img/ice-left.png);
+  background-image: url(../img/ice-left.png), url(../img/ice-right.png);
+  background-position: left bottom, right bottom;
   background-repeat: no-repeat;
-  background-position: left bottom;
 }
 #footer .row #footer-right h1{
   text-align: right;
