--- a/css/style.css
+++ b/css/style.css
@@ -179,8 +179,36 @@ header .container {
 .navbar-text{
   font-family: "Fredoka One";
 }
-#footer .img{
-  background-image: url(../img/ice-right.png);
-  background-repeat: no-repeat;
-  background-position: right bottom;
+#prizes-box #box-title{
+  text-align: center;
+  font-family: "Fredoka One";
+  font-size: 32px;
+  padding: 12.5px 0px;
+  background: linear-gradient(89.97deg, #2D6A4F -27.83%, #52B588 117%);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 26px 26px 0px 0px;
+  margin-left: -15.5px;
+  margin-right: -15.5px;
+}
+#prizes-box h1{
+  text-align: center;
+  font-family: "Source Sans Pro Regular";
+  font-size: 20px;
+  font-weight: 700;
+}
+#prizes-box{
+  text-align: center;
+  background: #FFFFFF;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 25px;
+  margin-bottom: 48px;
+  padding-bottom: 20px;
+}
+#prizes{
+  margin-right: 5%;
+  margin-left: 5%;
+}
+#prizes-img{
+  width: 106px;
+  height: 106px;
 }
