--- a/css/style.css
+++ b/css/style.css
@@ -72,21 +72,29 @@ header .container {
   color: #1f355e;
 }
 .nav-item {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 2px;
 }
 .nav-tabs .nav-link {
   color: #000000;
+  padding: 2px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 .nav-tabs .nav-link:hover {
-  border: none;
+  border-color: transparent transparent black transparent;
   font-weight: bold;
+  padding: 2px;
+  border-bottom: 2px solid;
 }
 .nav-tabs .nav-link.active {
   background-color: transparent;
-  border: none;
+  border-color: transparent transparent black transparent;
   color: #000000;
   font-weight: bold;
+  padding: 2px;
+  border-bottom: 2px solid;
 }
 .text-dark-blue {
   color: #1f355e;
