--- a/css/style.css
+++ b/css/style.css
@@ -1,62 +1,72 @@
 /*Font*/
 @font-face {
-  font-family: "Source Sans Pro Regular";
-  src: url("../fonts/SourceSansPro-Regular.ttf");
+  font-family: "Audimat Mono Bold";
+  src: url("../fonts/AUDIMB__.TTF");
 }
 @font-face {
-  font-family: "Roboto Bold";
-  src: url("../fonts/Roboto-Bold.ttf");
+  font-family: "Audimat Mono Reg";
+  src: url("../fonts/AUDIMRG_.TTF");
 }
 @font-face {
-  font-family: "Fredoka One";
-  src: url("../fonts/FredokaOne-Regular.ttf");
+  font-family: "Galaxy Outline";
+  src: url("../fonts/SF\ Distant\ Galaxy\ Outline.ttf");
+}
+@font-face {
+  font-family: "Galaxy Regular";
+  src: url("../fonts/SF\ Distant\ Galaxy.ttf");
+}
+@font-face {
+  font-family: "Hind Bold";
+  src: url("../fonts/Hind-Bold.ttf");
 }
 
 /*general*/
 .bg-gradient {
-  background: rgb(82, 181, 136);
-  background: linear-gradient(
-    0deg,
-    rgba(82, 181, 136, 1) 0%,
-    rgba(244, 235, 193, 1) 100%
-  );
+  background-image:url(../img/Background\ Bionix.svg);
+  background-size: cover;
+}
+
+.logo{
+  margin: 48px;
 }
 header h1 {
   text-align: center;
   position: relative;
   margin-bottom: 0px;
-  font-family: "Source Sans Pro Regular";
+  font-family: "Galaxy Outline";
   font-style: normal;
   font-weight: bold;
-}
-.countdown {
-  text-align: center;
-  font-size: 64px;
-  font-family: "Roboto Bold";
-}
-.countdown li {
-  background-color: rgba(244, 235, 193, 0.5);
+  color: #1A6D75;
+  font-size: 60px;
 }
 .tombol {
   text-align: center;
-  margin-top: 15px;
 }
 .button {
-  background: linear-gradient(0deg, #055c5c -64.71%, #b0edeb 137.63%);
-  border-radius: 22px;
-  padding: 10px 40px 10px 40px;
+  background: linear-gradient(270.02deg, #328796 0%, #285B70 44.34%, #364A82 99.96%);
+  border-radius: 7px;
   border: none;
   text-align: center;
-  font-family: "Source Sans Pro Regular";
+  font-family: "Audimat Mono Reg";
   font-weight: bold;
+  font-size: 32px;
+  margin: 0px 20px 0 20px;
 }
 header .container {
   position: relative;
   z-index: 1;
 }
-.countdown li {
+.countdown {
+  text-align: center;
+  font-size: 20px;
+  font-family: "Audimat Mono Reg";
+  text-shadow: 0px 6px 6px rgb(0 0 0 / 25%);
+  margin-bottom: 90px;
+}
+.countdown li{
+  color: white;
   display: inline-block;
-  font-size: 15px;
+  font-size: 30px;
   list-style-type: none;
   padding: 1px;
 }
@@ -65,17 +75,29 @@ header .container {
 #minutes,
 #seconds {
   display: block;
-  font-size: 50px;
+  color: #AEC1C5;
+  font-size: 175px;
   margin: 15px;
   margin-bottom: 0px;
 }
+.nav-container{
+  width: 100%;
+}
+nav ul{
+  font-size: 30px;
+}
 .nav {
-  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 48px;
 }
 .nav-link {
-  color: #1f355e;
+  color: #000000;
+  font-family: "Audimat Mono Bold";
 }
 .nav-item {
+  display: flex;
   margin-left: 15px;
   margin-right: 15px;
   padding: 2px;
@@ -90,7 +112,7 @@ header .container {
   border-color: transparent transparent black transparent;
   font-weight: bold;
   padding: 2px;
-  border-bottom: 2px solid;
+  border-bottom: 4px solid;
 }
 .nav-tabs .nav-link.active {
   background-color: transparent;
@@ -98,72 +120,88 @@ header .container {
   color: #000000;
   font-weight: bold;
   padding: 2px;
-  border-bottom: 2px solid;
+  border-bottom: 4px solid;
 }
 .text-dark-blue {
-  color: #1f355e;
+  color: #000000;
 }
 #about {
   position: relative;
   text-align: center;
-  background-image: url(../img/slice6.png);
-  background-repeat: no-repeat;
-  background-size: 258px 298px;
-  background-position: center;
 }
 #descbox-about {
+  margin-top: 7%;
   margin-left: 20%;
   margin-right: 20%;
 }
-.title-heading h1 {
-  font-family: "Fredoka One";
-  padding: 45px 0px;
-  text-align: center;
-  font-size: 36px;
-  margin: unset;
+.description p {
+  font-family: "Hind Bold";
+  font-weight: 700;
+  font-size: 29px;
+}
+.text-coming-soon{
+  color: #3298A4;
+  font-family: "Galaxy Regular";
+  font-size: 111px;
+  filter: blur(0.25px);
+  -webkit-text-fill-color: #3298A4;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #FFF2AD;
+  text-shadow: 4px 4px 20px white;
+  margin-top: 100px;
+}
+.text-stay-tune{
+  font-family: "Audimat Mono Reg";
+  font-size: 28px;
+  font-weight: 600;
+  margin-top: 50px;
+  
+}
+.text-stay-tune span{
+  font-family: "Audimat Mono Reg";
+  font-size: 28px;
+  font-weight: 600;
+  padding-bottom: 8px;
+  border-bottom: 7px #3298A4 solid;
+  border-radius: 4px;
 }
 #header-row h1 {
-  margin-top: 60px;
+  margin-top: 48px;
   margin-left: 20px;
   margin-right: 20px;
 }
 #button2 {
   margin-top: 20px;
+  color: white;
+  padding: 13px 25px 13px 25px;
+  font-family: "Audimat Mono Reg";
 }
-.description p {
-  font-family: "Source Sans Pro Regular";
-  font-weight: 700;
+#button3 {
+  margin-top: 20px;
+  color: white;
+  padding: 13px 75px 13px 75px;
+  background: linear-gradient(270.02deg, #364A82 0%, #285B70 44.34%, #328796 99.96%);
+  font-family: "Audimat Mono Reg";
 }
+
 .contact-info h1 {
   text-align: center;
   font-family: "Source Sans Pro Regular";
   font-size: 30px;
   font-weight: bold;
 }
-#footer {
-  margin-top: 10%;
+footer {
+  position: sticky;
+  margin-top: 100%;
   background-color: rgba(255, 255, 255, 0.1);
   max-width: 100%;
   padding: 5% 6.5% 1%;
-  background-image: url(../img/ice-left.png), url(../img/ice-right.png);
-  background-position: left bottom, right bottom;
-  background-repeat: no-repeat;
-}
-#footer .row #footer-right h1 {
-  /* text-align: right; */
 }
 #footer h1 {
   color: white;
   font-size: 24px;
-  font-family: "Source Sans Pro Regular";
+  font-family: "Hind Bold";
   font-weight: 600;
-}
-#footer p {
-  color: white;
-  font-family: "Source Sans Pro Regular";
-  font-size: 18px;
-  font-weight: 400;
-  /* max-width: 312px; */
 }
 .fab,
 .fas {
@@ -171,9 +209,6 @@ header .container {
   font-size: 40px;
   margin-left: 10px;
   margin-bottom: 10px;
-}
-.listsocmed {
-  /* text-align: right; */
 }
 #web-ise {
   /* text-align: right; */
@@ -259,7 +294,10 @@ a.tombol-daftar {
 /* CSS Media Query */
 @media (max-width: 992px) {
   #header-row h1 {
-    font-size: 1.5rem;
+    font-size: 2rem;
+  }
+  nav ul{
+    font-size: 15px;
   }
   #timeline {
     background-size: 50%, 50%;
