--- a/css/style.css
+++ b/css/style.css
@@ -21,32 +21,26 @@
 }
 
 /*general*/
-.bg-gradient {
-  background-image:url(../img/Background\ Bionix.svg);
+.bg{
+  background-image: url(../img/Background\ Bionix.svg);
   background-size: cover;
+  width: 100%;
+  height: 100%;
 }
-
-.logo{
-  margin: 48px;
+.logo img{
+  margin: 17px 0 17px 85px;
+  width: 130px;
+  height: auto;
 }
-header h1 {
-  text-align: center;
-  position: relative;
-  margin-bottom: 0px;
-  font-family: "Galaxy Outline";
-  font-style: normal;
-  font-weight: bold;
-  color: #1A6D75;
-  font-size: 60px;
-}
-
-header .container {
-  position: relative;
-  z-index: 1;
-}
-
 .nav-container{
   width: 100%;
+}
+.navbar{
+  background: #FB5E57;
+  box-shadow: 0px 3px 10px #333;
+}
+.navbar-custom{
+  height: 150px;
 }
 nav ul{
   font-size: 30px;
@@ -55,11 +49,10 @@ nav ul{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 48px;
 }
 .nav-link {
   color: #000000;
-  font-family: "Audimat Mono Bold";
+  font-family: "Hind Bold";
 }
 .nav-item {
   display: flex;
@@ -85,7 +78,32 @@ nav ul{
   color: #000000;
   font-weight: bold;
   padding: 2px;
-  border-bottom: 4px solid;
+  border-bottom: 6px solid;
+}
+.navbar .login{
+  background: linear-gradient(270.02deg, #364A82 0%, #285B70 44.34%, #328796 99.96%);
+  border-radius: 20px;
+  font-size: 26px;
+  font-weight: 300;
+  color: white;
+  padding: 10px 60px 10px 60px;
+  margin: 48px;
+
+}
+header h1 {
+  text-align: center;
+  position: relative;
+  margin-bottom: 0px;
+  font-family: "Galaxy Outline";
+  font-style: normal;
+  font-weight: bold;
+  color: #1A6D75;
+  font-size: 60px;
+}
+
+header .container {
+  position: relative;
+  z-index: 1;
 }
 
 #home {
@@ -196,7 +214,27 @@ nav ul{
 }
 #studentlevel{
   background-image: url(../img/floating\ rock.svg);
-  background-position: right top;
+  background-position: top right;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+#studentlevel #descbox-about .text-coming-soon{
+  color: #3298A4;
+  font-family: "Galaxy Regular";
+  font-size: 111px;
+  filter: blur(0.1px);
+  -webkit-text-fill-color: #3298A4;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #FFF2AD;
+  text-shadow: 4px 4px 20px white;
+  margin: 200px 0px 200px 0;
+}
+#studentlevel #descbox-about .description p{
+  font-family: "Hind Bold";
+  font-weight: 700;
+  font-size: 29px;
+  text-align: center;
+  margin: 100px 0 200px 0;
 }
 .contact-info h1 {
   text-align: center;
@@ -219,8 +257,8 @@ footer {
 }
 .fab,
 .fas {
-  color: white;
-  font-size: 40px;
+  color: #222;
+  font-size: 28px;
   margin-left: 10px;
   margin-bottom: 10px;
 }
