--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,22 @@
   font-family: "Hind Bold";
   src: url("../fonts/Hind-Bold.ttf");
 }
+@font-face {
+  font-family: "Hind Regular";
+  src: url("../fonts/Hind-Regular.ttf");
+}
 
 /*general*/
 .bg{
   background-image: url(../img/Background\ Bionix.svg);
   background-size: cover;
+  background-repeat: no-repeat;
   width: 100%;
   height: 100%;
 }
+
+
+/* navbar section start */
 .nav-container{
   width: 100%;
 }
@@ -79,6 +87,37 @@ nav ul{
   border-radius: 2px;
   border-bottom: 4px solid;
 }
+.nav-tabs .nav-link i{
+  color: #222;
+  font-size: 22px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+.navbar .nav-item .dropdown-menu{
+  display: none; 
+}
+.navbar .nav-item:hover .dropdown-menu{
+  display: block; 
+}
+.navbar .nav-item .dropdown-menu{ 
+  margin-top:0; 
+  border-radius: 10px;
+  padding: 15px;
+}
+.navbar .nav-item .dropdown-menu a{
+  font-size: 22px;
+  font-family: "Hind Bold";
+  padding: 15px 10px 10px 20px;
+  border-radius: 10px;
+  width: 175px;
+}
+.navbar .nav-item .dropdown-menu .fas{
+  float: right;
+  padding-top: 5px;
+}
+.navbar .nav-item .dropdown-menu a:hover{
+  background: linear-gradient(90deg, rgba(54, 74, 130, 0.5) 0%, rgba(40, 91, 112, 0.5) 52.08%, rgba(50, 135, 150, 0.5));
+}
 .navbar .login{
   background: linear-gradient(270.02deg, #364A82 0%, #285B70 44.34%, #328796 99.96%);
   border-radius: 20px;
@@ -87,9 +126,10 @@ nav ul{
   color: white;
   padding: 12px 60px 10px 60px;
   margin: 48px;
+  transition: all 0.3s ease;
 }
 .navbar .login:hover{
-  box-shadow: 0 7px 10px grey ;
+  box-shadow: 0 3px 5px grey ;
   color: white;
 }
 .navbar .login:active{
@@ -97,6 +137,9 @@ nav ul{
   margin: 55px;
   font-size: 18px;
 }
+
+
+/* Header Section Start */
 header img{
   margin-top: 180px;
 }
@@ -108,7 +151,8 @@ header h1 {
   font-style: normal;
   font-weight: bold;
   color: #1A6D75;
-  font-size: 60px;
+  font-size: 55px;
+  letter-spacing: 4px;
 }
 
 header .container {
@@ -116,6 +160,8 @@ header .container {
   z-index: 1;
 }
 
+
+/* Home section start */
 #home {
   text-align: center;
 }
@@ -125,9 +171,9 @@ header .container {
   margin-right: 20%;
 }
 .description p {
-  font-family: "Hind Bold";
-  font-weight: 700;
-  font-size: 29px;
+  font-family: "Hind Regular";
+  font-weight: 65 0;
+  font-size: 20px;
 }
 .countdown {
   text-align: center;
@@ -139,7 +185,7 @@ header .container {
 .countdown li{
   color: black;
   display: inline-block;
-  font-size: 30px;
+  font-size: 20px;
   list-style-type: none;
   padding: 1px;
 }
@@ -149,7 +195,7 @@ header .container {
 #seconds {
   display: block;
   color: #2A5872;
-  font-size: 175px;
+  font-size: 75px;
   margin: 15px;
   margin-bottom: 0px;
 }
@@ -160,9 +206,10 @@ header .container {
   filter: blur(0.1px);
   -webkit-text-fill-color: #3298A4;
   -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: #FFF2AD;
+  -webkit-text-stroke-color: #f0d23c;
   text-shadow: 4px 4px 20px white;
   margin-top: 100px;
+  letter-spacing: 20px;
 }
 .text-stay-tune{
   font-family: "Audimat Mono Reg";
@@ -181,6 +228,7 @@ header .container {
 }
 .tombol {
   text-align: center;
+  margin-bottom: 200px;
 }
 .tombol a{
   border-radius: 20px;
@@ -188,7 +236,7 @@ header .container {
   text-align: center;
   font-family: "Hind Bold";
   font-weight: bold;
-  font-size: 32px;
+  font-size: 22px;
   margin: 0px 20px 0 20px;
   padding: 13px 25px 13px 25px;
   color: rgb(255, 255, 255, 95%);
@@ -201,7 +249,7 @@ header .container {
 }
 .tombol a:active{
   box-shadow: 0 7px 10px grey ;
-  font-size: 26px;
+  font-size: 18px;
 }
 .button {
   border-radius: 7px;
@@ -209,7 +257,7 @@ header .container {
   text-align: center;
   font-family: "Audimat Mono Reg";
   font-weight: bold;
-  font-size: 32px;
+  font-size: 22px;
   margin: 0px 20px 0 20px;
 }
 #button2 {
@@ -222,6 +270,9 @@ header .container {
   padding: 13px 75px 13px 75px;
   background: linear-gradient(270.02deg, #364A82 0%, #285B70 44.34%, #328796 99.96%);
 }
+
+
+/* Student level start */
 #studentlevel{
   background-image: url(../img/floating\ rock.svg);
   background-position: top right;
@@ -252,12 +303,11 @@ header .container {
   font-size: 30px;
   font-weight: bold;
 }
-footer {
+.footer {
   position: sticky;
-  margin-top: 100%;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: #530E0B;
   max-width: 100%;
-  padding: 5% 6.5% 1%;
+  margin-top: 200px;
 }
 #footer h1 {
   color: white;
@@ -265,14 +315,21 @@ footer {
   font-family: "Hind Bold";
   font-weight: 600;
 }
-.fab,
+#footer i {
+  color: #f1f1f1;
+  font-size: 22px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+/* .fab,
 .fas {
   color: #222;
   font-size: 22px;
   margin-left: 10px;
   margin-bottom: 10px;
-}
-#web-ise {
+} */
+#web-ise{
   /* text-align: right; */
   color: white;
 }
@@ -291,9 +348,6 @@ footer {
   top: 10px;
   left: 10px;
   width: 48px;
-}
-a.tombol-daftar {
-  letter-spacing: 1px;
 }
 
 #prizes-box #box-title {
@@ -338,16 +392,6 @@ a.tombol-daftar {
     url(../img/timeline-ornament-r.svg);
   background-repeat: no-repeat;
   background-position: left bottom, right top;
-}
-.navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(82, 181, 136, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-}
-.navbar-toggler {
-  border-color: rgb(82, 181, 136);
-}
-.navbar-toggler:focus {
-  border-color: rgb(82, 181, 136);
-  outline: none;
 }
 /* CSS Media Query */
 @media (max-width: 1084px) {
