--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,6 @@ nav ul{
   font-size: 18px;
 }
 
-
 /* Header Section Start */
 header img{
   margin-top: 180px;
@@ -228,7 +227,7 @@ header .container {
 }
 .tombol {
   text-align: center;
-  margin-bottom: 200px;
+  margin-bottom: 500px;
 }
 .tombol a{
   border-radius: 20px;
@@ -304,24 +303,43 @@ header .container {
   font-weight: bold;
 }
 .footer {
-  position: sticky;
   background-color: #530E0B;
   max-width: 100%;
-  margin-top: 200px;
+}
+footer .container{
+  width: 1800px;
+}
+#footer img{
+  margin: 70px 0 5px 48px;
 }
 #footer h1 {
   color: white;
-  font-size: 24px;
-  font-family: "Hind Bold";
-  font-weight: 600;
+  font-size: 20px;
+  font-family: "Hind Regular";
+  font-weight: 700;
+  letter-spacing: 2px;
 }
 #footer i {
   color: #f1f1f1;
-  font-size: 22px;
+  font-size: 24px;
   margin-left: 10px;
   margin-bottom: 10px;
+  letter-spacing: 8px;
 }
-
+#footer-right{
+  margin-top: 100px;
+}
+#footer ul{
+  list-style-type: none;
+  display: inline-block;
+}
+#footer ul a{
+  color: white;
+  text-decoration: none;
+}
+.footer hr{
+  border-top: 1px solid rgba(209, 108, 108, 0.45) ;
+}
 /* .fab,
 .fas {
   color: #222;
