--- a/css/style.css
+++ b/css/style.css
@@ -36,24 +36,28 @@
 /* navbar section start */
 .nav-container{
   width: 100%;
+  font-size: 19px;
 }
 .navbar{
   background: transparent;
+  transition: all 0.2s ease;
 }
 .navbar.sticky{
   background: #FB5E57;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.18);
+  font-size: 18px;
+}
+.navbar.sticky .navbar-brand{ 
+  width: 100px;
 }
 .navbar-custom{
   height: 100px;
 }
 .navbar-brand{
-  width: 100px;
+  width: 120px;
   height: auto;
   margin-left: 80px;
-}
-nav ul{
-  font-size: 18px;
+  transition: all 0.2s ease;
 }
 .nav {
   display: flex;
