--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@
 }
 .navbar .nav-item .dropdown-menu a:hover{
   background: linear-gradient(90deg, rgba(54, 74, 130, 0.5) 0%, rgba(40, 91, 112, 0.5) 52.08%, rgba(50, 135, 150, 0.5));
+  text-decoration: none;
 }
 .navbar .nav-item .dropdown-menu a.active{
   background: linear-gradient(90deg, rgba(54, 74, 130, 0.5) 0%, rgba(40, 91, 112, 0.5) 52.08%, rgba(50, 135, 150, 0.5));
@@ -350,6 +351,11 @@ header .container {
   margin-top: 100px;
   margin-bottom: 700px;
 }
+#clabout img,
+#clbenefit img,
+#cltimeline img{
+  width: 99.4vw;
+}
 
 .footer {
   background-color: #530E0B;
@@ -398,6 +404,13 @@ footer .container{
 }
 
 /* CSS Media Query */
+@media (max-width: 1200px) {
+  #clabout img,
+  #clbenefit img,
+  #cltimeline img{
+    width: 100vw;
+  }
+}
 @media (max-width: 991px) {
   .navbar .navbar-collapse{
     background: #fb5f57;
@@ -422,7 +435,8 @@ footer .container{
     border-style: outset;
     border: none;
   }
-  #slabout #descbox-about .text-coming-soon{
+  #slabout #descbox-about .text-coming-soon, 
+  #clabout #descbox-about .text-coming-soon{
     font-size: 4rem;
     letter-spacing: 1rem;
   }
@@ -434,6 +448,11 @@ footer .container{
   }
   nav ul{
     font-size: 19px;
+  }
+  .text-coming-soon,
+  #slabout #descbox-about .text-coming-soon,
+  #clabout #descbox-about .text-coming-soon{
+    font-size: 4.5rem;
   }
 }
 @media (max-width: 768px) {
