--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@
 .nav-link {
   color: #000000;
   font-family: "Hind Bold";
+
 }
 .nav-item {
   display: flex;
@@ -93,6 +94,9 @@
   padding: 2px;
   margin-left: 15px;
   margin-right: 15px;
+  border-style: outset;
+  outline: none;
+  background: transparent;
 }
 .nav-tabs .nav-link:hover {
   border-color: transparent transparent black transparent;
@@ -122,7 +126,7 @@
   border-radius: 10px;
   padding: 15px;
 }
-.navbar .nav-item .dropdown-menu a{
+.navbar .nav-item .dropdown-menu button{
   font-size: 22px;
   font-family: "Hind Bold";
   padding: 15px 10px 10px 20px;
@@ -134,11 +138,11 @@
   float: right;
   padding-top: 5px;
 }
-.navbar .nav-item .dropdown-menu a:hover{
+.navbar .nav-item .dropdown-menu button:hover{
   background: linear-gradient(90deg, rgba(54, 74, 130, 0.5) 0%, rgba(40, 91, 112, 0.5) 52.08%, rgba(50, 135, 150, 0.5));
   text-decoration: none;
 }
-.navbar .nav-item .dropdown-menu a.active{
+.navbar .nav-item .dropdown-menu button.active{
   background: linear-gradient(90deg, rgba(54, 74, 130, 0.5) 0%, rgba(40, 91, 112, 0.5) 52.08%, rgba(50, 135, 150, 0.5));
   color: #111;
 }
